Closed Bug 669975 Opened 14 years ago Closed 14 years ago

websocket ASSERTION: nsLoadGroup not thread-safe

Categories

(Core :: Networking: WebSockets, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8
Tracking Status
firefox6 --- unaffected
firefox7 + fixed
firefox8 --- fixed

People

(Reporter: mcmanus, Assigned: mcmanus)

Details

(Whiteboard: [inbound][qa-])

Attachments

(1 file)

over in bug 669819 a stack with this assertion was reported. It turns out to be a distraction from the real issue of that bug, so I am splitting them apart. From https://bugzilla.mozilla.org/show_bug.cgi?id=669819#c7 "the real cause is a regression from 537787, mLoadGroup was supposed to be moved to a base class but was instead duplicated in both the base and derived classes. It should also be proxy released as I mentioned in comment 6, but that's apparently only relevant on a corner case that isn't being tested." From https://bugzilla.mozilla.org/show_bug.cgi?id=669819#c10 "r=jdm" From https://bugzilla.mozilla.org/show_bug.cgi?id=669819#c11 jduell says a? aurora "The e10s patch landed in aurora, and this fixes a relatively important yet simple bug in it."
Attached patch patch v1Splinter Review
Assignee: nobody → mcmanus
Status: NEW → ASSIGNED
Attachment #544586 - Flags: review+
Attachment #544586 - Flags: approval-mozilla-aurora?
Whiteboard: [inbound]
Comment on attachment 544586 [details] [diff] [review] patch v1 Approved for Aurora.
Attachment #544586 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Tracking for Aurora / Firefox 7 because it's a new(ish) feature.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
Mozilla/5.0 (X11; Linux x86_64; rv:7.0) Gecko/20100101 Firefox/7.0 Could you provide a test case or some clear STRs in order to get this issue verified on QA side?
the STR was a mochitest orange failure involving test_websocket_basic.html that has cleared up. comment 0 points to 669819 for the particular failure.
qa- as no QA fix verification needed
Whiteboard: [inbound] → [inbound][qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: