bug 669975 - websockets e10s mLoadGroup member duplicated r=jdm